--- a/resources/scss/bootstrap/icons/icons-reference.html
+++ b/resources/scss/bootstrap/icons/icons-reference.html
@@ -115,6 +115,14 @@
           <div class="icon icon-check"></div>
           <input type="text" readonly="readonly" value="check">
         </li>
+        <li>
+          <div class="icon icon-comment"></div>
+          <input type="text" readonly="readonly" value="comment">
+        </li>
+        <li>
+          <div class="icon icon-download"></div>
+          <input type="text" readonly="readonly" value="download">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -217,6 +225,14 @@
         <li>
           <div data-icon="y" class="icon"></div>
           <input type="text" readonly="readonly" value="y">
+        </li>
+        <li>
+          <div data-icon="z" class="icon"></div>
+          <input type="text" readonly="readonly" value="z">
+        </li>
+        <li>
+          <div data-icon="A" class="icon"></div>
+          <input type="text" readonly="readonly" value="A">
         </li>
       </ul>
     </div>
