--- a/resources/scss/bootstrap/icons/icons-reference.html
+++ b/resources/scss/bootstrap/icons/icons-reference.html
@@ -123,6 +123,10 @@
           <div class="icon icon-download"></div>
           <input type="text" readonly="readonly" value="download">
         </li>
+        <li>
+          <div class="icon icon-search"></div>
+          <input type="text" readonly="readonly" value="search">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -233,6 +237,10 @@
         <li>
           <div data-icon="A" class="icon"></div>
           <input type="text" readonly="readonly" value="A">
+        </li>
+        <li>
+          <div data-icon="B" class="icon"></div>
+          <input type="text" readonly="readonly" value="B">
         </li>
       </ul>
     </div>
